# scrnsvr

./: .gitignore  Cargo.toml  build.rs  readme.md  scrnsvr.desktop
src/: lib.c  main.c  main.rs
